# smarter-home

./: .dockerignore  .env-example  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.api  Dockerfile.webapp  LICENSE  Makefile  README.md  SECURITY.md  db-schema.sql  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum  main.go  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature-request-backend.md  feature-request-dekstop.md  feature-request-devops.md  feature-request-web.md
.github/workflows/: build-and-publish.yml  run-pr-staging-deploy.yml  run-pr-tag-gen.yml  run-release-deploy.yml  run-unit-tests.yml  test-build.yml  validate-backend.yml  validate-frontend.yml
.sqlx/: query-13e17a29040d8765c2e4a06752b6f4801923cc87bd3603686497f46807404142.json  query-1409fef83781f1994a293fe432e22a0555c8c6b1a2d29a97f2bae41875ce7e11.json  query-1ab34dcbb13e0b5c55984daaaf7ec52878fa222d0110a48ae2d740dd89b220a9.json  query-1b0eea1a8a17c49d17b7d29c92ad4893e2f2360e990c907866fb9c8d8f99ba2e.json  query-1c910ed106f44c28296aa1c1e4a8098308a4170d5bda8b5dc29834a918d84c51.json  query-2afb73072e301fa39c24ab603739ce250cc8dd770361559b2e868a8dd5977194.json  query-2b62afb9f8925c40a5b9869733b11def0f9966941beab4a63de4f6ba5717ae8b.json  query-2ba14355d8e76e89da712812c99e405868d7bc42f0ea68bba13869908016136e.json  query-3bced667f1f0980655d872270602b31f5eafb05c7daed2342ca11b86facbdc5a.json  query-3db61a3cbb5ecb25d92d6f2e3f0e9669ffb189911be24fe0f9121dec70b5f9dc.json  query-6437bc20b9351d447934c9ad0385bdf1649e5188e62ac0bea8a881020b21e7aa.json  query-65c937efa29d258ad57ae884ff814c6a32351632a84641af863c191fb013c323.json  query-6ac389a63a02c34eb042ca54f07925e270d4b74e87204d57154c22aa0dcd23ec.json  query-727e5a4dd5614721c59ef50a54685b0fe54914cf229f438143c878f0fa775b43.json  query-8169488c2c2dc04ca1b87cedcd1823bd1007dad163fb3c21b6f00eb1d05d5b6a.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8a68ec7836df40c862000e4b0dad7f3d87285d8e471e7b04f229e1f43af03cdc.json  query-8d2b0bd0436ed73ab6fb600bbc8d9b15484f08d9a2d61ef54bb6824db8bc6b37.json  query-945b9f32c23cb990a200fc8bbe699ef5db6d8f36a286ad736d1e671c1d6fd5b7.json  query-948fe187bd96dec21c7fc04b64dfa1722b66605a14a77a7223b312a70b9f8974.json  query-d5031a93468d8c270a6d432ad824f6662e7f35f1e5a2ced87c22b4e98cd22e11.json  query-f35130e9662dc66802da95159efe21b3cc5097f5ddddd6e327aecf499e712293.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
DEPRICATED_server/: .env-example  Dockerfile  docker-compose.yml  go.sum
DEPRICATED_server/cmd/: main.go
DEPRICATED_server/database/: database.go
DEPRICATED_server/handler/: ConsumptionMetrics.go
api-rs/: .gitignore  Cargo.toml
api-rs/src/: main.rs  schema.rs
apps/api/: main.py  pyproject.toml
apps/backend/: Program.cs  backend.csproj  backend.http
backend/: Cargo.toml
backend/lib/lib-models/: Cargo.toml
backend/lib/lib-models/src/: lib.rs
backend/lib/lib-models/src/domain/: mod.rs  user.rs
backend/migrations/2024-02-27-001730_create_tables/: down.sql  up.sql
backend/services/api/src/: main.rs
backend/services/api/src/routes/: mod.rs
backend/services/api/src/store/: mod.rs
backend/services/api/src/store/power/: mod.rs
backend/src/: error.rs  main.rs  schema.rs
backend/src/models/: mod.rs  user.rs
backend/src/repository/: mod.rs
backend/src/repository/quest/: mod.rs
cargo/services/api/: Cargo.toml
cargo/services/api/src/: error.rs  main.rs
cargo/services/api/src/api/: power.rs
cargo/services/api/src/routes/: errors.rs
cargo/services/api/src/store/power/: mod.rs
client/: bun.lockb  index.html  package.json
cmd/: main.go
database/: database.go
docs/: README.md  auth.md  backend-guidelines.md  code-style.md  database-guidelines.md  design-choices.md  environment-variables.md  frontend-guidelines.md  github-policies.md  nextjs-best-practices.md  rust-best-practices.md
handler/: ConsumptionMetrics.go  ConsumptionTracker.go  auth.go
migrations/: 0001_init.sql  0002_home-tables.up.sql  0002_user-tables.up.sql  0003_home-tables.up.sql  0003_user-tables.down.sql  0003_user-tables.up.sql  0004_tibber-token.down.sql  0004_tibber-token.up.sql  0005_home-address-text.down.sql  0005_home-address-text.up.sql  0006_home-token-text.down.sql  0006_home-token-text.up.sql  0007_favorite-home.down.sql  0007_favorite-home.up.sql  0008_refresh-tokens.up.sql  0009_home-location-hashes.down.sql  0009_home-location-hashes.up.sql
models/: Electricity.go  User.go  api.go  live_consumption.go  pgs.go  questdb.go  sm-consumption.go
router/: router.go
server/: go.mod  go.sum
server/cmd/: main.go
smarter-home-api/: Cargo.toml
smarter-home-local-actor/: Cargo.toml
smarter-home-models/: Cargo.toml
src/lib/lib-db/: Cargo.toml  build.rs
src/lib/lib-db/src/: config.rs  lib.rs
src/lib/lib-db/src/home/: mod.rs
src/lib/lib-db/src/power/: mod.rs
src/lib/lib-db/src/refresh_token/: mod.rs
src/lib/lib-db/src/user/: mod.rs
src/lib/lib-models/: Cargo.toml
src/lib/lib-models/src/: error.rs  lib.rs
src/lib/lib-models/src/domain/: auth.rs  home.rs  mod.rs  power.rs  user.rs
src/lib/lib-models/src/entity/: home.rs  mod.rs  power.rs  timeserie.rs  user.rs
src/lib/lib-utils/: Cargo.toml
src/lib/lib-utils/src/: crypto.rs  lib.rs  spatial_hash.rs
src/services/api/: Cargo.toml
src/services/api/src/: error.rs  main.rs
src/services/api/src/routes/: auth.rs  home.rs  mod.rs
src/services/api/src/routes/home/: mod.rs
src/services/api/src/routes/power/: get.rs  post.rs
src/services/api/src/routes/user/: mod.rs
src/services/api/src/store/: home.rs  mod.rs  user.rs
src/services/api/src/store/power/: mod.rs
src/services/tui/: Cargo.toml  README.md
src/services/tui/src/: main.rs  ui.rs
src/services/tui/src/http/: mod.rs
webapp/: bun.lockb  index.html
workers/: tibber.go
workflow-helpers/: bump-semver.js  clippy-helper.sh  get-release-label.js
(+200 files in other folders)
