[workspace]
resolver = "2"
members = [
  "src/lib/lib-models",
  "src/lib/lib-utils",
  "src/lib/lib-db",
  "src/services/api",
  # "src/services/desktop/src-tauri",
]

[workspace.dependencies]
tokio = { version = "^1", features = ["full"] }
features = "^0.10"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
uuid = { version = "^1", features = ["v4", "serde"] }
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
axum = { version = "^0.8", features = ["ws", "multipart", "macros"] }
axum-extra = { version = "^0.10", features = ["typed-header"] }
# surrealdb = "2.3.10"
serde_json = "^1.0"
jsonwebtoken = { version = "^10.1", features = ["aws_lc_rs"] }
sqlx = { version = "^0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "json",
  "chrono",
  "tls-rustls",
] }
utoipa = { version = "^5.4", features = ["uuid", "chrono"] }
thiserror = "^2.0"
anyhow = "^1"
