[package]
name = "api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
diesel = { version = "2.1.4", features = ["postgres", "serde_json", "chrono", "uuid"] }
dotenvy = "0.15.7"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
