[workspace]
resolver = "2"
members = ["lib/lib-models", "lib/lib-utils", "services/api"]

[workspace.dependencies]
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
uuid = { version = "^1", features = ["v4", "serde"] }
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
sqlx = { version = "^0.8", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "json",
  "chrono",
  "tls-rustls",
] }
thiserror = "^2.0"
anyhow = "^1"
