[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal libraries
lib-models = { path = "../../lib/lib-models" }
lib-database = { path = "../../lib/lib-database" }
lib-utils = { path = "../../lib/lib-utils" }
# Workspace libraries

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# External
axum = { version = "0.7.5", features = ["ws"] }
socketioxide = "0.12.0"
tower-http = { version = "0.5.2", features = ["trace"] }
