[package]
name = "lib-db"
version = "0.1.0"
edition = "2024"

[dependencies]
# Local dependencies
lib-models = { path = "../lib-models" }
lib-utils = { path = "../lib-utils" }

# Workspace dependencies
serde = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
