[package]
name = "lib-models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "^0.22"
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
features = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
surrealdb = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
mongodb = { workspace = true }
questdb-rs = { workspace = true }
