[package]
name = "lib-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local crates
lib-models = { path = "../lib-models" }

# external crates from workspace
jsonwebtoken = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }

# external crates from crates.io
argon2 = "^0.5"
# set rand_core feature flag for argon2
rand_core = { version = "0.6.4", features = ["getrandom"] }
base64 = "^0.22"
