[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Internal libraries
lib-models = { path = "../../lib/lib-models" }
lib-utils = { path = "../../lib/lib-utils" }
lib-db = { path = "../../lib/lib-db" }
# Workspace libraries
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
utoipa = { workspace = true }
axum-extra = { workspace = true }
once_cell = { workspace = true }

# Service specific dependencies
tower-http = { version = "^0.6", features = ["trace", "cors", "fs"] }
reqwest = "^0.13"
scalar_api_reference = { version = "^0.2", features = ["axum"] }
# oauth2 = "4.4.2"
