[package]
name = "tui"
version = "0.1.0"
description = "TUI client app for smarter home"
authors = ["MartinEllegard"]
#license = "MIT"
edition = "2024"

[dependencies]
# Dependencies from the workspace
lib-models = { path = "../../lib/lib-models" }
lib-utils = { path = "../../lib/lib-utils" }
# Dependencies inherited from the workspace
serde = { workspace = true }
serde_json = { workspace = true }

# Dependencies specific to this crate
crossterm = "^0.29"
ratatui = "^0.29"
color-eyre = "^0.6"
reqwest = { version = "^0.12", features = ["json", "blocking"] }
once_cell = "^1.21"
# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
